# WaveVisualizer

./: .gitignore  .null-ls_945182_README.md  CMakeLists.txt  README.md  WaveVisualizer.c  build.sh  cmake.sh  fft  fft.c  visualizer
src/: WaveVisualizer.c  fft.c  plug.c  plug.h
